--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,4 @@
-#nome{
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-#idade{
-    margin-bottom: 10px;
+.login{
+    margin-top: 300px;
+    text-align: center;
 }
